@@ -73,7 +73,7 @@
         
         .zoom {
           font-size: 14px;
-          color: $gray-1;
+          color: $apd-black-1;
           display: block;
           position: absolute;
           bottom: 60px;
@@ -222,7 +222,7 @@
             margin: 2px 10px;
             
             span {
-              color: $white;
+              color: $apd-black-1;
             }
           }
         }
