@@ -18,7 +18,7 @@ $blue-1: #0275d8;
 $blue-2: #5bc0de;
 $blue-3: #F0F9FC;
 $danger: #a94442;
-$gray-1: #323232;
+$apd-black-1: #323232;
 $gray-2: #ddd;
 $gray-3: #f5f5f5;
 $gray-4: #efefff;
