@@ -450,7 +450,7 @@ th {
     .affiliate-products-db .tab-pane.overview .general-rating-row > div .amazon-rating .number-of-ratings {
       margin: 2px 10px; }
       .affiliate-products-db .tab-pane.overview .general-rating-row > div .amazon-rating .number-of-ratings span {
-        color: #ffffff; }
+        color: #323232; }
   .affiliate-products-db .tab-pane.details .row table {
     margin-bottom: 0; }
     .affiliate-products-db .tab-pane.details .row table tr.category {
