@@ -5,15 +5,25 @@
 */
 
 .apdsetupmenu {
+  margin-top: 30px;
+  
+  h1 {
+    font-size: 24px;
+  }
+  h2 {
+    font-size: 18px;
+  }
   
   label {
     font-weight: 300;
+    text-transform: uppercase;
   }
-  .apdsetupmenu {
-    margin-top: 30px;
-  }
-  .form-description {
-    margin: 20px 0 10px 0;
+  .form-group{
+    margin-top:20px;
   }
   
+  .hint{
+    padding: 10px;
+    background: lightgray;
+  }
 }
