@@ -371,7 +371,7 @@
                                                                         </tr>
                                                                         <tr>
                                                                             <td>Laufzeit</td>
-                                                                            <td>{$RunTime}</td>
+                                                                            <td>{$RunTimeText}</td>
                                                                             <td>{$RunTimeRatingPercent}</td>
                                                                         </tr>
                                                                         <tr class="sum">
